--- a/sherry-dev/style.css
+++ b/sherry-dev/style.css
@@ -31,7 +31,7 @@ html,body{
 }
 #nav i,h3{
     font-size: 16px;
-    border: 1.5px solid #000;
+    /* border: 1.5px solid #000; */
     font-weight: 500;
     padding: 5px 10px;
     border-radius: 50px;
@@ -44,7 +44,7 @@ html,body{
 #nav button{
     padding: 7px 12px;
     border-radius: 50px;
-    border: 1.5px solid #000;
+    /* border: 1.5px solid #000; */
     font-size: 16px;
     font-weight: 500;
 }
