--- a/VR-Experience/src/index.css
+++ b/VR-Experience/src/index.css
@@ -1,26 +1,31 @@
+@import url("https://fonts.googleapis.com/css2?family=Parisienne&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-@layer base {
-  body {
-    @apply font-secondary bg-body text-white relative leading-relaxed font-extralight;
+@layer components {
+  .primary-btn {
+    @apply bg-gradient-to-r from-primary to-secondary duration-300 py-2 px-6 text-white rounded-full hover:scale-105;
   }
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    @apply font-primary;
+}
+
+.animated-wrapper {
+  animation-name: move-wrapper;
+  animation-duration: 25s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+  animation-fill-mode: forwards;
+  position: absolute;
+}
+
+@keyframes move-wrapper {
+  0% {
+    transform: translate(150%, 30%) rotate(0) scale(0.8);
   }
-  a {
-    @apply text-[15px] font-medium;
+  50% {
+    transform: translate(60vw, 0vh) rotate(150deg) scale(1.2);
   }
-  .nav-link {
-    @apply after:w-6 after:h-1 after:absolute after:left-0 after:-bottom-2 after:rounded-full after:bg-transparent after:hover:bg-[#b936f5] after:transition-all after:duration-300 relative;
-  }
-  .btn {
-    @apply font-medium h-12 px-8 bg-gradient-to-r from-[#b936f5] to-[#f1006c] rounded text-[15px] hover:bg-gradient-to-l hover:from-[#b936f5] hover:to-[#f1006c] outline-none flex items-center justify-center cursor-pointer;
+  to {
+    transform: translate(40vw, 40vh) rotate(0deg) scale(0.8);
   }
 }
